# pyglotaran-extras

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff-notebooks.toml  .ruff.toml  .sourcery.yaml  .taplo.toml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  changelog.md  codecov.yml  justfile  package-lock.json  package.json  pyproject.toml  readthedocs.yml  requirements_dev.txt  requirements_min.txt  requirements_pinned.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  requirements_min.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autoupdate-pre-commit-config.yml  codeql.yml  integration-tests.yml  test.yml  trigger-binder.yml
binder/: environment.yml
devdocs/kinetic_scheme/: architecture.md
docs/: Makefile  api_docs.md  api_docs.rst  compat_refactor_plan.md  conf.py  environment.yml  index.md  index.rst  installation.md  installation.rst  justfile  make.bat  requirements.txt  result_compat.md  usage.md  usage.rst
docs/_static/css/: mermaid_dark.css  xarray_dark.css
docs/config/project/: fs_config.yml  pygta_config.schema.json  pygta_config.yml
docs/config/project/subproject/: config_docs.ipynb
docs/notebooks/: kinetic_scheme_visualization.ipynb  target_rcg_gcrcg_rcgcr_refine-params.yml  target_rcg_gcrcg_rcgcr_refine.yml  tips_and_tricks.ipynb
pyglotaran_extras/: __init__.py  types.py
pyglotaran_extras/compat/: __init__.py  compat_result.py  convert_dataset.py  convert_result_dataset.py
pyglotaran_extras/config/: config.py  plot_config.py  utils.py
pyglotaran_extras/deprecation/: __init__.py  deprecation_utils.py
pyglotaran_extras/inspect/: __init__.py  a_matrix.py  cycler.py  utils.py
pyglotaran_extras/inspect/kinetic_scheme/: __init__.py  _constants.py  _k_matrix_parser.py  _kinetic_graph.py  _layout.py  plot_kinetic_scheme.py
pyglotaran_extras/inspect/kinetic_scheme/devdocs/: architecture.md
pyglotaran_extras/io/: __init__.py  boilerplate.py  load_data.py  setup_case_study.py  utils.py
pyglotaran_extras/plotting/: __init__.py  data.py  plot_coherent_artifact.py  plot_concentrations.py  plot_data.py  plot_doas.py  plot_guidance.py  plot_irf.py  plot_irf_dispersion_center.py  plot_irf_dispersions.py  plot_overview.py  plot_pfid.py  plot_residual.py  plot_spectra.py  plot_svd.py  plot_traces.py  style.py  utils.py
pyglotaran_extras/widgets/: __init__.py
pyglotaran_extras/widgets/kineticschemevisualizer/: __init__.py  utils.py  widget.py
pyglotaran_extras/widgets/kineticschemevisualizer/js/: layouts.js  widget.css
reference_only/: _the_replan_prompt_.md  curried-coalescing-manatee.md  model-matrix-visualizer-analysis.md  model-matrix-visualizer-reimplementation-plan.md  pyproject.toml  synthetic-wandering-cookie-1.md  synthetic-wandering-cookie-2.md  why_interactive_dragging_of_nodes_is_Needed_in_cytoscape.md
reference_only/kinetic-scheme-visualizer/: Makefile  README.md  package.json  pyproject.toml  requirements.txt
reference_only/kinetic-scheme-visualizer/example/: playing.ipynb  sequential6osc_S2rel.yml
reference_only/kinetic-scheme-visualizer/js/: grid.js  utils.js  widget.css  widget.js
reference_only/kinetic-scheme-visualizer/kineticschemevisualizer/: __init__.py  visualizer.py
reference_only/kinetic-scheme-visualizer/kineticschemevisualizer/static/: widget.css  widget.js
tests/: __init__.py  conftest.py
tests/config/: __init__.py  test_config.py  test_plot_config.py  test_utils.py
tests/data/a_matrix/: a_matrix_to_html_table_decimal_2.md  a_matrix_to_html_table_default.md  a_matrix_to_html_table_normalized.md  show_a_matrixes_decimal_2.md  show_a_matrixes_default.md  show_a_matrixes_expanded_dataset_2.md  show_a_matrixes_heading_offset_0.md  show_a_matrixes_min_size_2.md  show_a_matrixes_multiple_a_matrixes_in_dataset.md  show_a_matrixes_normalized.md
tests/data/config/: broken_config.schema.pydantic_lt_2_9.json  broken_config.yml  config_merge.yml  plot_config_merge.yml  pyglotaran_extras_config-broken.schema.json  pyglotaran_extras_config.schema.json  pyglotaran_extras_config.yml  pygta_config.schema.json  pygta_config.schema.pydantic_lt_2_9.json  pygta_config.yml  run_load_config_on_import.py
tests/deprecation/: __init__.py  test_deprecation_utils.py
tests/deprecation/modules/: test_io_boilerplate.py  test_plotting_data.py
tests/inspect/: __init__.py  test_a_matrix.py  test_utils.py
tests/inspect/kinetic_scheme/: __init__.py  test_k_matrix_parser.py  test_kinetic_graph.py  test_layout.py  test_plot_kinetic_scheme.py
tests/io/: __init__.py  test_boilerplate.py  test_get_script_dir.ipynb  test_load_data.py  test_setup_case_study.py
tests/plotting/: __init__.py  test_utils.py
