[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "pyglotaran-extras"
description = "Supplementary package for pyglotaran with (example) plotting code."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Joris Snellenburg", email = "j.snellenburg@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = [
  "version",
]
dependencies = [
  "cycler>=0.10",
  "docstring-parser>=0.16",
  "matplotlib>=3.3",
  "numpy>=1.22",
  "pydantic>=2.7",
  "pyglotaran>=0.7",
  "ruamel-yaml>=0.18.6",
  "tabulate>=0.8.9",
  "xarray>=2022.3",
]
optional-dependencies.dev = [
  "pyglotaran-extras[docs,test]",
]
optional-dependencies.docs = [
  "autodoc-pydantic>=2.2",
  "jupyterlab>=3",
  "myst-nb>=1.1.1",                  # notebook docs
  "myst-parser>=0.12",
  "numpydoc>=0.8",
  "sphinx>=3.2",
  "sphinx-copybutton>=0.3",
  "sphinx-last-updated-by-git>=0.3",
  "sphinx-rtd-theme>=1.2",
  "sphinxcontrib-jquery>=4.1",       # Needed for the search to work Ref.: https://github.com/readthedocs/sphinx_rtd_theme/issues/1434
  "sphinxcontrib-mermaid>=0.9.2",
]
optional-dependencies.test = [
  "coverage[toml]",
  "jsonschema>=4.22",
  "nbval>=0.9.6",
  "pluggy>=0.7",
  "pytest>=3.7.1",
  "pytest-cov>=2.5.1",
]
urls.Changelog = "https://pyglotaran-extras.readthedocs.io/en/latest/changelog.html"
urls.Documentation = "https://pyglotaran-extras.readthedocs.io"
urls."GloTarAn Ecosystem" = "https://glotaran.org"
urls.Homepage = "https://github.com/glotaran/pyglotaran-extras"
urls.Source = "https://github.com/glotaran/pyglotaran-extras"
urls.Tracker = "https://github.com/glotaran/pyglotaran-extras/issues"

[tool.hatch.version]
path = "pyglotaran_extras/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/pyglotaran_extras",
]

[tool.hatch.envs.default]
features = [
  "dev",
]

[tool.docformatter]
black = true
wrap-summaries = 99
wrap-descriptions = 99

# For now this is not used because pydoclint does not support toml when used with flake8

[tool.pydoclint]
skip-checking-short-docstrings = false
style = 'numpy'
exclude = '^(docs/|tests?/)'
require-return-section-when-returning-none = false
allow-init-docstring = true

[tool.coverage.paths]
source = [
  "pyglotaran_extras",
  "*/site-packages/pyglotaran_extras",
]
[tool.coverage.run]
branch = true
omit = [
  'tests/*',
  # comment the above line if you want to see if all tests did run
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  'pragma: no cover',

  # Don't complain about missing debug-only code:
  'def __repr__',
  'if self\.debug',

  # Don't complain if tests don't hit defensive assertion code:
  'raise AssertionError',
  'raise NotImplementedError',

  # Don't complain if non-runnable code isn't run:
  'if 0:',
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
]

[tool.mypy]
plugins = [
  "pydantic.mypy",
]
python_version = "3.10"
ignore_missing_imports = true
scripts_are_modules = true
show_error_codes = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
no_implicit_reexport = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.interrogate]
exclude = [
  "docs",
  "tests/*",
]
ignore-init-module = true
fail-under = 100
