[metadata]
name = pyglotaran_extras
version = attr: pyglotaran_extras.__version__
description = Supplementary package for pyglotaran with (example) plotting code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran-extras
author = Joris Snellenburg
author_email = j.snellenburg@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
project_urls =
    GloTarAn Ecosystem=https://glotaran.org
    Source=https://github.com/glotaran/pyglotaran-extras
    Tracker=https://github.com/glotaran/pyglotaran-extras/issues

[options]
packages = find:
install_requires =
    matplotlib>=3.3.0
    pyglotaran>=0.3.0
python_requires = >=3.8,<3.10
zip_safe = True

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight

[darglint]
docstring_style = numpy
ignore_regex = test_.+|.*dummy.*

[pydocstyle]
convention = numpy

[mypy]
ignore_missing_imports = True
scripts_are_modules = True
show_error_codes = True
