[metadata]
name = pyglotaran_extras
version = attr: pyglotaran_extras.__version__
description = Supplementary package for pyglotaran with (example) plotting code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran-extras
author = Joris Snellenburg
author_email = j.snellenburg@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
project_urls =
    GloTarAn Ecosystem=https://glotaran.org
    Documentation=https://pyglotaran-extras.readthedocs.io
    Changelog=https://pyglotaran-extras.readthedocs.io/en/latest/changelog.html
    Source=https://github.com/glotaran/pyglotaran-extras
    Tracker=https://github.com/glotaran/pyglotaran-extras/issues

[options]
packages = find:
install_requires =
    cycler>=0.10
    matplotlib>=3.3.0
    numpy>=1.21.2,<1.24
    pyglotaran>=0.7
    tabulate>=0.8.9
    xarray>=2022.3.0
python_requires = >=3.10,<3.11
zip_safe = True

[options.packages.find]
include =
    pyglotaran_extras
    pyglotaran_extras.*

[rstcheck]
ignore_directives = autosummary

[darglint]
docstring_style = numpy
ignore_regex = test_.+|.*dummy.*

[pydocstyle]
convention = numpy
